Fix flicker problem

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,3 +105,9 @@ a {
     color-scheme: dark;
   }
 }
+
+.layout-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+}
